Fix T76859: Cannot switch from editmode to texturepaint mode

Caused by 5159b8e1eadb.