source/blender/editors/sculpt_paint/paint_image.c
@@ -1130,9 +1130,6 @@ static bool texture_paint_toggle_poll(bContext *C)
   if (!ob->data || ID_IS_LINKED(ob->data)) {
     return 0;
   }
-  if (CTX_data_edit_object(C)) {
-    return 0;
-  }
 
   return 1;
 }
